--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: Project Philosopher's Stone
+description: A project to study operating systems/system programming in top-down method
